# aoc_2024

./: CMakeLists.txt  LICENSE  README.md  aoc24.c  aoc24.h  aocdriver.h  aocstack.c  aocstack.h  aocutil.c  day01.c  day02.c  template.c
